--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Welcome to IyiOluwa's Website</h1>
+<p>Brought to you by GitHub Pages 🥳🎉.</p>
 </body>
 </html>
